# aws-sdk-cpp

./: build.sh  cross_build.sh  do_build.sh  initial_copy.sh
aws-cpp-sdk-access-management/: CMakeLists.txt
aws-cpp-sdk-access-management/source/: AccessManagementClient.cpp
demo-app/: CMakeLists.txt  RunListener.cpp  RunTests.cpp  sqsApplication.cpp  sqsApplication.h
firehose-demo-app/: CMakeLists.txt  firehoseApplication.cpp  firehoseApplication.h  firehoseTests.cpp
firehose-demo-app-build/: build.sh  demofile.txt
firehose-demo-app-cross/: build.sh
